src/test/ui/unboxed-closures/issue-30906.stderr
error[E0308]: mismatched types
  --> $DIR/issue-30906.rs:15:5
   |
LL |     test(Compose(f, |_| {}));
   |     ^^^^ one type is more general than the other
   |
   = note: expected type `FnOnce<(&'x str,)>`
              found type `FnOnce<(&str,)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
